--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/DarkTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ItemPopupActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ProductViewActivity"
             android:exported="false" />
         <activity
