--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/DarkTheme"
         tools:targetApi="31">
+
         <activity
             android:name=".ItemPopupActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.ProductViewActivity"
             android:exported="false" />
+
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".presentation.TestStubDBMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
